# Gain-Capital-API

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Jenkinsfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  PreventInSourceBuilds.cmake  StaticAnalyzers.cmake
examples/: example.cpp
gcapi-python-master/gcapi/: gcapi_client.py
include/: gain_capital_api.h  gain_capital_client.h  gain_capital_exception.h
include/cpr/: cpr.h
scripts/: test.sh
src/: gain_capital_api.cpp  gain_capital_client.cpp  gain_capital_exception.cpp
test/: CMakeLists.txt  functional_correct_server_test.cpp  functional_failed_server_test.cpp  functional_tests.cpp  functional_tests_correct_server.cpp  functional_tests_failed_server.cpp  test.cpp  unit_test.cpp  unit_tests.cpp
